created test branch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<script src="decodebits.js"></script>
-
-omg it works
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>Testing Disassembler</title>
+</head>
+<body>
+  <label for="testinput">32 Bit string:</label>
+  <textarea id="bitstring" name="bitstring" rows="4" cols="50"></textarea>
+  <button id="btn" class="favorite styled" type="button">go!</button>
+  <script src="static/app/js/decodebits.js"></script>
+</body>
+</html>
