added extra helper functions to separate the register bits

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   <div class="output">
     <textarea id="output-box"></textarea>
   </div>
-  <script src="./static/app/js/decodebits.js"></script>
+  <script type="module" src="./static/app/js/decodebits.js"></script>
 </body>
 </html>
