fixing size of upload arrow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="canvas">
       <div id="drop-zone" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
         <p>drag &amp drop .txt files</p>
-	<img src="./files/media/up-arrow.png" alt="upload-file">
+	<img id="upload-img" src="./files/media/up-arrow.png" alt="upload-file">
       </div>
       <div class="file-btn">
         <form id="selector-area" method="post" enctype="multipart/form-data">
